doc: Added description about layered arc

--- a/docs/architecture/adr/ADR-001.md
+++ b/docs/architecture/adr/ADR-001.md
@@ -1,5 +1,4 @@
-# ADR-001: [Decision Title]
-
+# ADR-001: App Architecture
 **Status:** Proposed  
 **Date:** 2026-01-21
 **Author:** Fedor Terekhov (FterDev)  
@@ -34,15 +33,19 @@ The app is separated into layers as following:
 
 Presentation(API) -> Business Logic (Services) -> Data Access (Repositories) -> Database
 
-It's the most common approach for small applications and leads very fast to a productive version and the planning by it self can be kept very simple. With the simplicity a side effect occurs. If the app stays in the simple version such an architeture is not a problem, but if the app grows and gets more features it's harder keep the overview and with all the services and repositories it can very fast lead to spaghetti code. If the app grows and scalability becomes an important point it will be hard to extract some features to make those scaleable Also it's easy to work at such projects as long as there are a few developers working on it or optimally one. With more people working on a such project more conflicts will occure.
+It's the most common approach for small applications and leads very fast to a productive version and the planning by it self can be kept very simple. With the simplicity a side effect occurs. If the app stays in the simple version such an architeture is not a problem, but if the app grows and gets more features it's harder to keep the overview and with all the services and repositories it can very fast lead to spaghetti code. If the app grows and scalability becomes an important point it will be hard to extract some features to make those scaleable. Also it's easy to work at such projects as long as there are a few developers working on it or optimally one. With more people working on a such project more conflicts will occure.
 
 **Pros:**
-- 
-- 
+- Very fast development pace
+- Simple structure
+- Perfect for a MVP
+- Fits small teams / single devs
 
 **Cons:**
-- 
-- 
+- Too much dependencies
+- While perfect for a MVP bad for product growth
+- Lack of structure
+- Conflicts if working in a bigger team
 
 ---
 
