Added Option 2 description

--- a/docs/architecture/adr/ADR-001.md
+++ b/docs/architecture/adr/ADR-001.md
@@ -28,6 +28,9 @@ Important! UI is to be ignored at this point, as it's irrelevant for the main bu
 
 **Description:**
 
+Traditional three-layer architecture with clear horizontal separation between 
+presentation, business logic, and data access. Each layer can only depend on 
+the layer directly below it.
 
 The app is separated into layers as following:
 
@@ -36,32 +39,63 @@ Presentation(API) -> Business Logic (Services) -> Data Access (Repositories) -> 
 It's the most common approach for small applications and leads very fast to a productive version and the planning by it self can be kept very simple. With the simplicity a side effect occurs. If the app stays in the simple version such an architeture is not a problem, but if the app grows and gets more features it's harder to keep the overview and with all the services and repositories it can very fast lead to spaghetti code. If the app grows and scalability becomes an important point it will be hard to extract some features to make those scaleable. Also it's easy to work at such projects as long as there are a few developers working on it or optimally one. With more people working on a such project more conflicts will occure.
 
 **Pros:**
-- Very fast development pace
-- Simple structure
-- Perfect for a MVP
-- Fits small teams / single devs
+- Simplicity: Easy to understand and implement quickly
+- Familiarity: Most developers know this pattern
+- Fast initial development: Less boilerplate, get productive immediately
+- Clear separation: Each layer has obvious responsibilities
+- Tooling support: Works naturally with EF Core and ASP.NET patterns
+- Easy onboarding: New contributors can start quickly
 
 **Cons:**
-- Too much dependencies
-- While perfect for a MVP bad for product growth
-- Lack of structure
-- Conflicts if working in a bigger team
+- Tight coupling: Layers depend on concrete implementations below
+- Testing challenges: Hard to test business logic without database
+- Less flexible: Difficult to swap out data access layer
+- Anemic domain: Business logic often scattered across services
+- Layer violations: Easy to accidentally create dependencies across layers
+- Scalability limits: Can become monolithic and hard to split
+
+**Trade-offs:**
+- Development speed vs. architectural purity
+- Pragmatism vs. testability
+- Immediate productivity vs. long-term flexibility
 
 ---
 
 ### Option 2: Clean Architecture / Onion
 
 **Description:**
-[Description]
+
+Dependency inversion-based architecture where the domain core is isolated 
+from external concerns. Dependencies point inward toward the domain, never 
+outward. External systems (database, APIs, UI) depend on the core, not 
+vice versa.
+
+**Structure:**
+- **Domain Core**: Entities, value objects, domain interfaces (no dependencies)
+- **Application Layer**: Use cases, business logic, application services
+- **Infrastructure**: Database access, external APIs, file system
+- **Presentation**: API controllers, middleware, configuration
 
 **Pros:**
-- 
-- 
+- Testability: Core business logic can be tested without external dependencies
+- Maintainability: Clear separation of concerns, easy to locate code
+- Flexibility: Easy to swap infrastructure (e.g., change database)
+- Framework independence: Domain logic doesn't depend on .NET specifics
+- Professional appearance: Demonstrates architectural maturity for contributors
+- Scalability: Structure scales well as project grows
 
 **Cons:**
-- 
-- 
+- Boilerplate overhead: More files, interfaces, and mapping code
+- Steeper learning curve: Contributors need to understand the pattern
+- Slower initial development: More upfront setup required
+- Can be overkill: For simple CRUD operations, adds unnecessary complexity
+- Requires discipline: Easy to violate boundaries without strict reviews
 
+**Trade-offs:**
+- Code organization vs. development speed
+- Testability vs. simplicity
+- Long-term maintainability vs. short-term productivity
+  
 ---
 
 ### Option 3: Command Query Responsibility Segregation 
