docs: Added Option 4 description

--- a/docs/architecture/adr/ADR-001.md
+++ b/docs/architecture/adr/ADR-001.md
@@ -101,29 +101,78 @@ vice versa.
 ### Option 3: Command Query Responsibility Segregation 
 
 **Description:**
-[Description]
+Separates read operations (queries) from write operations (commands) into 
+distinct models and handlers. Commands modify state, queries return data. 
+Each operation has a dedicated handler, typically using the Mediator pattern.
+
+**Structure:**
+- **Commands**: CreateContentType, UpdateContent, DeleteContent
+- **Command Handlers**: Execute business logic, validate, persist changes
+- **Queries**: GetContentTypes, GetContentById, SearchContent
+- **Query Handlers**: Optimize for read performance, return DTOs
+- **Mediator**: Routes commands/queries to appropriate handlers (e.g., MediatR)
 
 **Pros:**
-- 
-- 
+- Performance optimization: Read and write models can be optimized independently
+- Scalability: Easy to scale reads and writes separately
+- Clarity: Each operation is explicit and isolated
+- Testability: Handlers are small, focused, easy to test
+- Flexibility: Can use different data stores for reads vs writes
+- Extensibility: Easy to add new operations without modifying existing code
 
 **Cons:**
-- 
-- 
+- Complexity: More moving parts, more code to maintain
+- Boilerplate: Handler for every single operation
+- Learning curve: Contributors need to understand CQRS pattern
+- Debugging difficulty: Request flow through mediator harder to trace
+- Eventual consistency: If using separate read models, data may lag
+- Overkill for simple CRUD: Adds overhead for straightforward operations
 
+**Trade-offs:**
+- Scalability and performance vs. complexity
+- Explicit operations vs. development speed
+- Future flexibility vs. immediate simplicity
 
 ### Option 4: Hybrid - Clean-ish Layered
 
 **Description:**
-[Description]
+
+Combines the simplicity of layered architecture with key Clean Architecture 
+principles. Uses dependency inversion where it matters (interfaces in core, 
+implementations in infrastructure) but avoids dogmatic separation. Prioritizes 
+pragmatism over architectural purity.
+
+**Structure:**
+- **Hopen.Core**: Domain entities, interfaces, business logic, DTOs
+- **Hopen.Infrastructure**: EF Core, repositories, external services
+- **Hopen.Api**: Controllers, middleware, authentication, configuration
+  
+**Dependency Rules:**
+- Core has zero external dependencies
+- Infrastructure depends on Core (implements interfaces)
+- Api depends on both Core and Infrastructure
+
 
 **Pros:**
-- 
-- 
-
+- Balanced approach: Structure without excessive boilerplate
+- Faster development: Less ceremony than full Clean Architecture
+- Easy to understand: Simpler mental model for contributors
+- Testability: Core business logic can be tested in isolation
+- Flexibility: Can evolve toward full Clean Architecture later
+- Pragmatic: Use interfaces where valuable, skip where unnecessary
+  
 **Cons:**
-- 
-- 
+- Less strict boundaries: Easier to violate architectural rules
+- Requires discipline: No framework enforcement of conventions
+- "Gray areas": Unclear where some code belongs without strict guidelines
+- Documentation needed: Must clearly communicate conventions
+- Inconsistency risk: Different developers may interpret rules differently
+- Not a "recognized pattern": Harder to explain as "we use X architecture"
+
+**Trade-offs:**
+- Flexibility vs. strict architectural boundaries
+- Pragmatism vs. pattern recognition
+- Quick wins vs. long-term consistency
 
 ---
 
