docs: ADR-001 completed

--- a/docs/architecture/adr/ADR-001.md
+++ b/docs/architecture/adr/ADR-001.md
@@ -178,23 +178,79 @@ pragmatism over architectural purity.
 
 ## Rationale
 
-[Explain why this option was chosen]
+We chose the Pragmatic Layered with Clean Principles (Hybrid) approach, with a 
+clear path toward full Clean Architecture as the project matures.
+
+**Key deciding factors:**
+
+**Immediate productivity while maintaining quality:**
+The hybrid approach allows rapid MVP development without sacrificing long-term 
+architectural health. We can ship features quickly while maintaining clear 
+separation of concerns.
+
+**Open source readiness:**
+While starting as a solo project, Hopen is designed for contributors. The 
+hybrid approach provides enough structure for contributors to understand where 
+code belongs, without overwhelming them with full Clean Architecture complexity 
+upfront.
+
+**Evolutionary architecture:**
+By starting with Core (domain) and Application (use cases) separated from day 
+one, we establish the foundation for Clean Architecture. As business logic 
+grows more complex, we can gradually enforce stricter boundaries without 
+major refactoring.
+
+**Project structure:**
+```
+Hopen.Core/          # Domain entities, value objects
+Hopen.Application/   # Business logic, use cases, interfaces
+Hopen.Infrastructure/ # EF Core, external services, implementations
+Hopen.Api/           # Presentation layer
+```
+
+This separation maintains Clean Architecture's core principle (dependency 
+inversion) while avoiding excessive boilerplate in early stages.
+
+**Migration path:**
+As the project grows in complexity or contributor count increases, we can 
+incrementally adopt stricter Clean Architecture patterns (detailed use case 
+handlers, CQRS for complex operations, domain events) without architectural 
+rewrites.
 
 ## Consequences
 
 ### Positive
-- 
+- Fast initial development while maintaining architectural quality
+- Clear project structure guides contributors where to add code
+- Core business logic testable without infrastructure dependencies
+- Can evolve to full Clean Architecture without breaking changes
+- Dependency inversion established from day one
+- Professional appearance for portfolio and potential contributors
+- Flexibility to make pragmatic decisions when strict patterns add no value
+
 
 ### Negative
-- 
-
+- Requires active documentation of conventions and boundaries
+- Risk of architectural drift without code review discipline
+- Not a "standard" pattern - needs explanation in contributing guide
+- Gray areas where code placement isn't immediately obvious
+- Must resist temptation to violate boundaries for quick fixes
+- Contributors may need guidance on when to use interfaces vs concrete types
+  
 ### Neutral
-- 
+- Architecture will evolve as project matures - documented in future ADRs
+- Some operations may use simplified patterns while others follow strict Clean
+- Team needs to accept that consistency will improve over time
+- Code reviews must balance pragmatism with architectural principles
 
 ## Implementation Notes
 
-[Optional - How to implement this decision]
+[Optional - How to implement this decision] -> TBD
 
 ## References
 
-[Optional - Links to relevant documentation or resources]
+https://learn.microsoft.com/en-us/azure/architecture/patterns/cqrs
+https://mdamranhossain.substack.com/p/clean-architecture-vs-onion-architecture
+https://www.geeksforgeeks.org/system-design/design-patterns-architecture/
+https://www.geeksforgeeks.org/system-design/design-patterns-architecture/#cqrs-command-query-responsibility-segregation
+
