docs: Accepted ADR-001

--- a/docs/architecture/adr/ADR-001.md
+++ b/docs/architecture/adr/ADR-001.md
@@ -1,5 +1,5 @@
 # ADR-001: App Architecture
-**Status:** Proposed  
+**Status:** Accepted  
 **Date:** 2026-01-21
 **Author:** Fedor Terekhov (FterDev)  
 
