docs: ADR-003 added query performance and evolution strategy

--- a/docs/architecture/adr/ADR-003.md
+++ b/docs/architecture/adr/ADR-003.md
@@ -322,6 +322,111 @@ Content type schemas stored as JSONB can be used directly with JSON Schema
 validation libraries (NJsonSchema for .NET). Application-layer validation 
 provides flexibility while PostgreSQL constraints ensure basic data integrity.
 
+**Query Performance Strategy:**
+
+For common queries, we leverage PostgreSQL features:
+
+1. **Simple filters:** Direct JSONB queries with GIN index
+```sql
+-- Frequently used, performs well with GIN index
+SELECT * FROM Content 
+WHERE content_type_id = 'blog-uuid'
+  AND data->>'published' = 'true'
+  AND data->>'title' ILIKE '%keyword%'
+```
+
+2. **Generated columns for hot paths:** Add when profiling shows bottlenecks
+```sql
+-- If title is queried 1000x/day, add generated column
+ALTER TABLE Content 
+ADD COLUMN title_generated TEXT 
+  GENERATED ALWAYS AS (data->>'title') STORED;
+```
+
+3. **Status queries:** Use relational column for best performance
+```sql
+-- Fast: indexed relational column
+SELECT * FROM Content WHERE status = 'published'
+```
+
+Decision: Start with pure JSONB queries, add generated columns based on 
+real usage patterns, not speculation.
+
+
+## Schema Evolution Strategy
+
+**Backward Compatibility Approach:**
+
+Content type schemas can evolve over time. Our strategy ensures existing 
+content remains valid:
+
+**Adding Fields:**
+```json
+// Old schema
+{"fields": [{"name": "title", "type": "text"}]}
+
+// New schema - add optional field
+{"fields": [
+  {"name": "title", "type": "text"},
+  {"name": "author", "type": "text", "required": false}
+]}
+```
+- Existing content remains valid (new field not required)
+- New content can use new field
+- No data migration needed
+
+**Removing Fields:**
+```json
+// Remove "deprecated_field"
+// Old content still contains it in JSONB - no issue
+// New content won't include it
+// Optional: cleanup script to remove from existing content
+```
+- Soft delete: mark field as deprecated in schema
+- Data remains in JSONB but ignored by validation
+- Optional background job can clean up old data
+
+**Changing Field Types:**
+```json
+// Risky: "price" from text → number
+// Strategy: Add new field, migrate gradually
+{"fields": [
+  {"name": "price_old", "type": "text", "deprecated": true},
+  {"name": "price", "type": "number", "required": false}
+]}
+
+// Migration script converts existing content
+UPDATE Content 
+SET data = jsonb_set(
+  data, 
+  '{price}', 
+  to_jsonb((data->>'price_old')::numeric)
+);
+```
+
+**Schema Versioning:**
+
+Content type schemas include version number:
+```json
+{
+  "version": 2,
+  "fields": [...]
+}
+```
+
+This allows:
+- Tracking schema changes over time
+- Conditional validation based on content creation date
+- Rollback capability if needed
+
+**Validation Rules:**
+
+Application validates content against current schema version, with 
+flexibility for older content:
+- New content: strict validation against current schema
+- Existing content: warn on deprecated fields, allow missing new optional fields
+- Admin UI can show "outdated content" that should be updated
+
 ---
 
 ## Consequences
