docs: Removed overdetailed implimentation notes

--- a/docs/architecture/adr/ADR-004.md
+++ b/docs/architecture/adr/ADR-004.md
@@ -565,197 +565,32 @@ routes. This keeps routing concerns close to presentation concerns.
 
 ## Implementation Notes
 
-### Backend Setup
+**Backend Setup:**
 
-**1. Create solution structure:**
-```bash
-dotnet new sln -n Hopen
-dotnet new classlib -n Hopen.Core
-dotnet new classlib -n Hopen.Application
-dotnet new classlib -n Hopen.Infrastructure
-dotnet new webapi -n Hopen.Api
+1. Solution structure: 4 projects (Core, Application, Infrastructure, Api)
+2. Project dependencies: Core → Application → Infrastructure → Api
+3. Key packages: 
+   - Npgsql.EntityFrameworkCore.PostgreSQL
+   - Microsoft.EntityFrameworkCore.Design
+   - Swashbuckle.AspNetCore
+   - Asp.Versioning.Mvc
+4. EF Core migrations tracked in Git, applied via `dotnet ef database update`
+5. Services registered with dependency injection in startup
 
-dotnet sln add Hopen.Core Hopen.Application Hopen.Infrastructure Hopen.Api
-```
+**Frontend Setup:**
 
-**2. Configure project dependencies:**
-```
-Hopen.Core          → (no dependencies)
-Hopen.Application   → Hopen.Core
-Hopen.Infrastructure → Hopen.Core, Hopen.Application
-Hopen.Api           → Hopen.Application, Hopen.Infrastructure
-```
+1. Angular 21 project with standalone components and routing
+2. Directory structure: pages/, features/, shared/, core/
+3. Key packages: @angular/material, RxJS
+4. Routes defined in pages/ directories, imported in root app.routes.ts
+5. Base API service in shared/services/ for HTTP communication
 
-**3. Install NuGet packages:**
-```bash
-# Hopen.Infrastructure
-dotnet add package Npgsql.EntityFrameworkCore.PostgreSQL
-dotnet add package Microsoft.EntityFrameworkCore.Design
+**Testing Strategy:**
 
-# Hopen.Api
-dotnet add package Swashbuckle.AspNetCore
-dotnet add package Asp.Versioning.Mvc
-```
-
-**4. Configure EF Core:**
-```csharp
-// Program.cs
-builder.Services.AddDbContext<HopenDbContext>(options =>
-    options.UseNpgsql(builder.Configuration.GetConnectionString("Default")));
-
-// Create migration
-dotnet ef migrations add InitialCreate --project Hopen.Infrastructure --startup-project Hopen.Api
-
-// Apply migration
-dotnet ef database update --project Hopen.Infrastructure --startup-project Hopen.Api
-```
-
-**5. Register repositories and services:**
-```csharp
-// Hopen.Api/Configuration/ServiceCollectionExtensions.cs
-public static class ServiceCollectionExtensions
-{
-    public static IServiceCollection AddApplicationServices(this IServiceCollection services)
-    {
-        services.AddScoped<IContentTypeRepository, ContentTypeRepository>();
-        services.AddScoped<IContentTypeService, ContentTypeService>();
-        return services;
-    }
-}
-```
-
----
-
-### Frontend Setup
-
-**1. Create Angular 21 project:**
-```bash
-ng new hopen-admin --standalone --routing --style=scss
-cd hopen-admin
-```
-
-**2. Create directory structure:**
-```bash
-mkdir -p src/app/{pages,features,shared,core}
-mkdir -p src/app/pages/content-types/{list,edit}
-mkdir -p src/app/features/content-types/{services,models,components}
-mkdir -p src/app/shared/{components,services,pipes,directives}
-mkdir -p src/app/core/{auth,layout,config}
-```
-
-**3. Install dependencies:**
-```bash
-ng add @angular/material
-npm install @angular/material-luxon-adapter  # For date handling
-```
-
-**4. Configure app:**
-```typescript
-// app.config.ts
-export const appConfig: ApplicationConfig = {
-  providers: [
-    provideRouter(routes),
-    provideHttpClient(
-      withInterceptors([authInterceptor])
-    ),
-    provideAnimationsAsync(),
-    // Material providers
-  ]
-};
-```
-
-**5. Create base services:**
-```typescript
-// shared/services/api.service.ts
-@Injectable({ providedIn: 'root' })
-export class ApiService {
-  private baseUrl = '/api/v1';
-  
-  constructor(private http: HttpClient) {}
-  
-  get<T>(path: string): Observable<T> {
-    return this.http.get<T>(`${this.baseUrl}${path}`);
-  }
-  
-  post<T>(path: string, body: any): Observable<T> {
-    return this.http.post<T>(`${this.baseUrl}${path}`, body);
-  }
-}
-```
-
----
-
-### Testing Strategy
-
-**Backend:**
-```csharp
-// Integration test with Testcontainers
-public class ContentTypeControllerTests : IAsyncLifetime
-{
-    private PostgreSqlContainer _postgres;
-    private WebApplicationFactory<Program> _factory;
-    
-    public async Task InitializeAsync()
-    {
-        _postgres = new PostgreSqlBuilder().Build();
-        await _postgres.StartAsync();
-        
-        _factory = new WebApplicationFactory<Program>()
-            .WithWebHostBuilder(builder =>
-            {
-                builder.ConfigureTestServices(services =>
-                {
-                    services.AddDbContext<HopenDbContext>(options =>
-                        options.UseNpgsql(_postgres.GetConnectionString()));
-                });
-            });
-    }
-    
-    [Fact]
-    public async Task CreateContentType_ReturnsCreated()
-    {
-        var client = _factory.CreateClient();
-        var response = await client.PostAsJsonAsync("/api/v1/content-types", 
-            new CreateContentTypeDto { Name = "blog_post" });
-            
-        Assert.Equal(HttpStatusCode.Created, response.StatusCode);
-    }
-}
-```
-
-**Frontend:**
-```typescript
-// Component test
-describe('ContentTypesListPage', () => {
-  let component: ContentTypesListPage;
-  let fixture: ComponentFixture<ContentTypesListPage>;
-  let service: jasmine.SpyObj<ContentTypeService>;
-  
-  beforeEach(() => {
-    const serviceSpy = jasmine.createSpyObj('ContentTypeService', ['getAll']);
-    
-    TestBed.configureTestingModule({
-      imports: [ContentTypesListPage],
-      providers: [
-        { provide: ContentTypeService, useValue: serviceSpy }
-      ]
-    });
-    
-    service = TestBed.inject(ContentTypeService) as jasmine.SpyObj<ContentTypeService>;
-    fixture = TestBed.createComponent(ContentTypesListPage);
-    component = fixture.componentInstance;
-  });
-  
-  it('should load content types on init', async () => {
-    const mockData = [{ id: '1', name: 'blog_post' }];
-    service.getAll.and.returnValue(Promise.resolve(mockData));
-    
-    await component.ngOnInit();
-    
-    expect(component.contentTypes()).toEqual(mockData);
-  });
-});
-```
+- Backend: Integration tests with Testcontainers for real PostgreSQL instances
+- Frontend: Component tests with TestBed and mocked services
+- Controllers tested via HTTP for realistic behavior
+- See `/tests` directory for reference implementations
 
 ---
 
